feat: Gist API - support efficient OU tree search and offline caching [DHIS2-19789]